# agent-coordination

./: .gitignore  README.md  pyproject.toml
docs/: how-it-works.html
examples/: bio_parallel_test.py  biology_pipeline_demo.py  biology_plan_execute_demo.py  parallel_demo.py  pipeline_demo.py  plan_execute_demo.py
graphs/: parallel.yaml  pipeline.yaml  plan_execute.yaml
outputs/: bio_parallel_report.md  bio_parallel_trace.json
outputs/pipeline/1/: pipeline_report.md  pipeline_trace.json
outputs/pipeline/2/: pipeline_trace.json
outputs/plan-execute/1/: biology_report.md
outputs/plan-execute/2/: biology_report.md
src/: agent.py  base.py  context.py  llm.py  logging.py  parsing.py  tracing.py
src/backends/: __init__.py  claude_code.py  codex.py  gemini.py  session_utils.py
src/coordinators/: __init__.py  graph.py  parallel.py  pipeline.py  plan_execute.py
src/graph/: __init__.py  envelope.py  executor.py  loader.py  schema.py  transforms.py
src/parallel/: runner.py
src/pipeline/: runner.py
src/plan_execute/: runner.py
tests/: test_graph_patterns.py
tests/examples/: bio_parallel_test.py  biology_pipeline_demo.py  biology_plan_execute_demo.py  pipeline_demo.py  plan_execute_demo.py
tests/outputs/parallel/1/: bio_parallel_report.md  bio_parallel_trace.json
tests/outputs/pipeline/2/: pipeline_report.md
tests/outputs/plan-execute/2/: biology_trace.json
