[project]
name = "agent-coordination"
version = "0.1.0"
description = "Three multi-agent coordination patterns using Codex CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pipeline-demo = "tests.examples.pipeline_demo:main"
plan-execute-demo = "tests.examples.plan_execute_demo:main"
parallel-demo = "tests.examples.parallel_demo:main"
biology-pipeline-demo = "tests.examples.biology_pipeline_demo:main"
