[project]
name = "agent-coordination"
version = "0.2.0"
description = "Graph-based multi-agent coordination with A2A protocol, supporting pipeline, parallel, plan-execute, and arbitrary topologies"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
pipeline-demo = "tests.examples.pipeline_demo:main"
plan-execute-demo = "tests.examples.plan_execute_demo:main"
parallel-demo = "tests.examples.parallel_demo:main"
biology-pipeline-demo = "tests.examples.biology_pipeline_demo:main"
